terraform/gce.tf

resource "google_compute_instance" "videocall" {
  #count = var.environment == "pro" ? 1 : 0
  name     = "${var.environment}-nogales-videocall"
  allow_stopping_for_update = true

  boot_disk {
    auto_delete = true
    device_name = "${var.environment}-nogales-videocall"

    initialize_params {
      image = "projects/cos-cloud/global/images/cos-stable-113-18244-85-29"
      size  = 50
      #type  = var.environment == "pro" ? "hyperdisk-balanced" : "pd-balanced"
      #type  = "hyperdisk-balanced"
      #type  = "pd-balanced"
      type = var.videocall_disktype
    }

    mode = "READ_WRITE"
  }

  can_ip_forward      = false
  deletion_protection = false
  enable_display      = false

  labels = {
    container-vm = "cos-stable-113-18244-85-29"
    goog-ec-src  = "vm_add-tf"
    environment  = var.environment
    application  = "nogales"
    service      = "videocall"
    managed-by   = "terraform"
  }

  # n1-standard-1 = 3.7G = 36 usd/month
  # n1-standard-2 = 7.5G = 70 usd/month
  # n1-highmem-2 = 2vcp 13G = 88 usd/month
  # n2-standard-2 = 2vCPUs, 8 GiB = 72usd/m
  # n4-standard-4 = vCPUs: 4, RAM: 16 GiB = 140usd/mont
  # n4-standard-8 = 8vcpu 32G = 278 usd/month (incompatible)
  # n4-highcpu-16 = 16vcpu 32GB = 468 usd/month (Enable 10 Gbps networking (comes with ≥16 vCPU VMs by default).)
  #machine_type = var.environment == "pro" ? "n2-standard-2" : "n4-standard-8"
  # custom-16-14848 16vcpu and 14G
  # custom-4-3840
  # --------------
  # c4-highcpu-8 = 4vcpu 16G = 250usd
  # n1-highcpu-16 = 8vcpu 16G = 290usd
  machine_type = var.videocall_machine_type

  metadata = {
    ssh-keys = join("\n", [
      local.secrets.ssh_ejfdelgado,
      local.secrets.ssh_rodalbores
      ])
    gce-container-declaration = <<EOT
spec:
  containers:
    - image: ${var.videocall_image}
      name:  nogalesserver
      resources:
        limits:
          memory: "${var.videocall_memory_limit}"
      env:
        - name: PORT
          value: 443
        - name: USE_SECURE
          value: yes
        - name: ENV
          value: pro
        - name: TRAIN_SERVER
          value: NA
        - name: FACE_SERVER
          value: NA
        - name: SEND_GRID_VARIABLE
          value: ${local.secrets.sendgrid_apikey}
        - name: EMAIL_SENDER
          value: ${var.email_sender}
        - name: WORKSPACE
          value: /tmp/app
        - name: NODE_SERVER_PATH
          value: /
        - name: BUCKET_PUBLIC
          value: ${var.environment}-nogales-public
        - name: BUCKET_PRIVATE
          value: ${var.environment}-nogales-private
        - name: INSTANCE_CONNECTION_NAME
          value: ${google_sql_database_instance.general.connection_name}
        - name: POSTGRES_HOST
          value: 127.0.0.1
        - name: POSTGRES_PORT
          value: ${local.secrets.postgress.port}
        - name: POSTGRES_DB
          value: ${local.secrets.postgress.db}
        - name: POSTGRES_USER
          value: ${local.secrets.postgress.user}
        - name: POSTGRES_PASSWORD
          value: "${local.secrets.postgress.pass}"
        - name: HEY_MARKET_API_KEY
          value: ${local.secrets.heymarket.HEY_MARKET_API_KEY}
        - name: HEY_MARKET_SENDER_ID
          value: ${local.secrets.heymarket.HEY_MARKET_SENDER_ID}
        - name: HEY_MARKET_INBOX_ID
          value: ${local.secrets.heymarket.HEY_MARKET_INBOX_ID}
        - name: HEY_MARKET_END_POINT
          value: ${var.heymarket_end_point}
        - name: AUTH_GROUP_ID_MAP
          value: ${var.auth_group_id_map}
        - name: AUTH_PROVIDER
          value: ${local.secrets.authentication.AUTH_PROVIDER}
        - name: MICROSOFT_CLIENT_ID
          value: ${local.secrets.authentication.MICROSOFT_CLIENT_ID}
        - name: MICROSOFT_TENANT
          value: ${local.secrets.authentication.MICROSOFT_TENANT}
        - name: WEBRTC_CONF
          value: ${var.webrtc_config}
        - name: REBOOT_TIME
          value: 7:30
        - name: SERVER_ZONE
          value: ${var.zone}
        - name: SERVER_PROJECT
          value: ${var.project_name}
        - name: SERVER_INSTANCE_NAME
          value: ${var.environment}-nogales-videocall
        - name: SOUP_ANNOUNCED_IP
          value: ${var.videocall_soup_ip}
        - name: USE_AUTORECOVERY_PROCESS
          value: ${var.videocall_autorecovery}
        - name: AVOID_REBOOT_ON_ERROR
          value: 1
        - name: MAX_SOUP_WORKER_LOAD
          value: ${var.soup_max_worker_load}
        - name: NODE_OPTIONS
          value: --max-old-space-size=${var.max_node_memory}
        - name: COMPUTE_DAILY_STATISTICS
          value: 1
        - name: REPLACER_USER
          value: aquintana@nogalespsychological.com
        - name: NO_PAGES
          value: 1
        - name: CORS_MAIN_ALLOWED_ORIGIN
          value: https://video.solvista.me,https://video-stg.solvista.me,https://apps.solvista.me
      securityContext:
        privileged: true
      stdin: false
      tty: false
      volumeMounts: []
      restartPolicy: Always
      volumes: []
EOT
    google-logging-enabled    = "true"
    # Help keep the image disk space free
    google-monitoring-enabled = "true"
    docker-gc-enabled = "true"
    startup-script = var.videocall_script

  }

  network_interface {
    access_config {
      nat_ip       = google_compute_address.videcall_ip.address
      network_tier = "PREMIUM"
    }
    queue_count = 0
    stack_type  = "IPV4_ONLY"
    network     = google_compute_network.nogales-network.id
    subnetwork  = google_compute_subnetwork.nogales-subnetwork.id
    network_ip  = google_compute_address.nogales_private_ip.address
  }

  scheduling {
    automatic_restart   = true
    on_host_maintenance = "MIGRATE"
    preemptible         = false
    provisioning_model  = "STANDARD"
  }

  service_account {
    email = google_service_account.videocall.email
    scopes = [
      "https://www.googleapis.com/auth/cloud-platform"
    ]
  }

  shielded_instance_config {
    enable_integrity_monitoring = true
    enable_secure_boot          = false
    enable_vtpm                 = true
  }

  depends_on = [google_project_iam_member.videocall_instance_sa_roles]

  tags = ["ssh", "http-server", "https-server", "mediasoup-server"]
  zone = var.zone
}

resource "google_compute_instance_group" "videocallgroup" {
  name        = "${var.environment}-videocall-group"
  zone        = var.zone
  instances   = [google_compute_instance.videocall.self_link]

  named_port {
    name = "https"
    port = "443"
  }

  network     = google_compute_network.nogales-network.id
}

resource "google_compute_health_check" "videocall" {
  name = "${var.environment}-health-check"
  timeout_sec        = 10
  check_interval_sec = 10

  https_health_check {
    port         = 443
  }

  log_config {
    enable = false
  }
}

resource "google_compute_backend_service" "videocallbkservice" {
  name     = "${var.environment}-videocall-bksrv"

  protocol              = "HTTPS"
  port_name             = "https"
  timeout_sec           = 7200
  enable_cdn            = true

  cdn_policy {
    cache_mode                    = "CACHE_ALL_STATIC" # Options: "CACHE_ALL_STATIC", "USE_ORIGIN_HEADERS", "FORCE_CACHE_ALL"
    default_ttl                   = 43200 # in seconds 12 h = 60x60x12
    max_ttl                       = 43200 # in seconds
    client_ttl                    = 43200 # in seconds
    negative_caching              = true
    serve_while_stale             = 86400
    cache_key_policy {
      include_protocol            = true
      include_host                = true
      include_query_string        = true
    }
  }

  backend {
    group = google_compute_instance_group.videocallgroup.self_link
  }

  health_checks = [
    google_compute_health_check.videocall.self_link
    ]
}

resource "google_compute_url_map" "videocallmap" {
  name        = "${var.environment}-videocall-map"

  default_service = google_compute_backend_service.videocallbkservice.id

  host_rule {
    hosts        = [
      var.environment == "pro" ? "video.solvista.me" : "video-stg.solvista.me"
      ]
    path_matcher = "allpaths"
  }

  path_matcher {
    name            = "allpaths"
    default_service = google_compute_backend_service.videocallbkservice.id

    path_rule {
      paths   = ["/*"]
      service = google_compute_backend_service.videocallbkservice.id
    }
  }
}

resource "google_compute_target_https_proxy" "default" {
  name             = "${var.environment}-videocall-proxy"
  url_map          = google_compute_url_map.videocallmap.id
  ssl_certificates = [google_compute_managed_ssl_certificate.default.id]
}

resource "google_compute_global_forwarding_rule" "default" {
  name       = "${var.environment}-videocall-forward"
  target     = google_compute_target_https_proxy.default.id
  port_range = 443
}
