terraform/n8n.tf

# Remeber:
# Identify the Load Balancer on gcp, check the Frontend HTTPS IP
# Go to Godaddy
# Add an A record on DNS with	video-stg	<frontend_ip>
# The check:
# dig n8n-stg.solvista.me +short

resource "google_compute_address" "n8n_ip" {
  name   = "${var.environment}-nogales-n8n-ip"
  region = var.region
}

resource "google_compute_address" "auto_assigned_private_ip" {
  name         = "${var.environment}-auto-assigned-private-ip"
  subnetwork   = google_compute_subnetwork.nogales-subnetwork.name
  address_type = "INTERNAL"
  region       = var.region
  address      = "10.2.0.6"
}


resource "google_compute_address" "n8n_private_ip" {
  name         = "${var.environment}-n8n-private-ip"
  subnetwork   = google_compute_subnetwork.nogales-subnetwork.name
  address_type = "INTERNAL"
  region       = var.region
  address      = "10.2.0.7"
}

resource "google_compute_firewall" "n8n_server" {
  name    = "${var.environment}-n8n-server"
  network = google_compute_network.nogales-network.name

  allow {
    protocol = "tcp"
    ports    = ["5678"]
  }

  # Leave it public for now
  source_ranges = ["0.0.0.0/0"]
  # Private subnet + GCP health check prober ranges only
  # source_ranges = ["10.2.0.0/24", "35.191.0.0/16", "130.211.0.0/22"]

  target_tags = ["n8n-server"]
}

resource "google_compute_instance" "n8n_master" {
  name     = "${var.environment}-nogales-n8n-master"
  allow_stopping_for_update = true

  boot_disk {
    auto_delete = true
    device_name = "${var.environment}-nogales-n8n-master"

    initialize_params {
      image = "projects/cos-cloud/global/images/cos-stable-113-18244-85-29"
      size  = 50
      type = var.n8n_disktype
    }

    mode = "READ_WRITE"
  }

  can_ip_forward      = false
  deletion_protection = false
  enable_display      = false

  labels = {
    container-vm = "cos-stable-113-18244-85-29"
    goog-ec-src  = "vm_add-tf"
    environment  = var.environment
    application  = "nogales"
    service      = "n8n"
    managed-by   = "terraform"
  }

  # n2-standard-4	4vCPU	16GB	~$140/mo
  # n2-standard-8	8vCPU	32GB	~$280/mo
  # e2-standard-4	4vCPU	16GB	~$100/mo
  machine_type = var.n8n_machine_type

  metadata = {
    ssh-keys = join("\n", [
      local.secrets.ssh_ejfdelgado,
      local.secrets.ssh_rodalbores
      ])
    gce-container-declaration = <<EOT
spec:
  containers:
    - image: ${var.n8n_image}
      name:  n8n_master_server
      resources:
        limits:
          memory: "${var.n8n_memory_limit}"
      env:
        - name: N8N_BASIC_AUTH_ACTIVE
          value: true
        - name: N8N_BASIC_AUTH_USER
          value: admin
        - name: N8N_BASIC_AUTH_PASSWORD
          value: ${local.secrets.n8n.N8N_BASIC_AUTH_PASSWORD}
        - name: GENERIC_TIMEZONE
          value: America/Los_Angeles
        - name: N8N_PORT
          value: 5678
        - name: N8N_ENCRYPTION_KEY
          value: ${local.secrets.n8n.N8N_ENCRYPTION_KEY}
        - name: N8N_LICENSE_KEY
          value: ${local.secrets.n8n.N8N_LICENSE_KEY}
        - name: DB_TYPE
          value: postgresdb
        - name: DB_POSTGRESDB_HOST
          value: 127.0.0.1
        - name: DB_POSTGRESDB_PORT
          value: 5432
        - name: DB_POSTGRESDB_USER
          value: ${local.secrets.n8n.postgress.user}
        - name: DB_POSTGRESDB_PASSWORD
          value: ${local.secrets.n8n.postgress.pass}
        - name: DB_POSTGRESDB_DATABASE
          value: n8n
        - name: INSTANCE_CONNECTION_NAME
          value: ${google_sql_database_instance.general.connection_name}
        - name: EXECUTIONS_MODE
          value: regular
        - name: N8N_SECURE_COOKIE
          value: true
        - name: N8N_HOST
          value: ${var.environment == "pro" ? "n8n.solvista.me" : "n8n-stg.solvista.me"}
        - name: N8N_PROTOCOL
          value: https
        - name: N8N_EDITOR_BASE_URL
          value: https://${var.environment == "pro" ? "n8n.solvista.me" : "n8n-stg.solvista.me"}
        - name: WEBHOOK_URL
          value: https://${var.environment == "pro" ? "n8n.solvista.me" : "n8n-stg.solvista.me"}/
        - name: N8N_SMTP_HOST
          value: smtp.sendgrid.net
        - name: N8N_SMTP_PORT
          value: 587
        - name: N8N_SMTP_USER
          value: apikey
        - name: N8N_SMTP_PASS
          value: ${local.secrets.sendgrid_apikey}
        - name: N8N_SMTP_SENDER
          value: no_reply@nogalespsychological.com
        - name: N8N_SMTP_SSL
          value: false
      securityContext:
        privileged: true
      stdin: false
      tty: false
      volumeMounts: []
      restartPolicy: Always
      volumes: []
EOT
    google-logging-enabled    = "true"
    google-monitoring-enabled = "true"
    docker-gc-enabled = "true"

  }

  network_interface {
    access_config {
      nat_ip       = google_compute_address.n8n_ip.address
      network_tier = "PREMIUM"
    }
    queue_count = 0
    stack_type  = "IPV4_ONLY"
    network     = google_compute_network.nogales-network.id
    subnetwork  = google_compute_subnetwork.nogales-subnetwork.id
    network_ip  = google_compute_address.n8n_private_ip.address
  }

  scheduling {
    automatic_restart   = true
    on_host_maintenance = "MIGRATE"
    preemptible         = false
    provisioning_model  = "STANDARD"
  }

  service_account {
    email = google_service_account.n8n.email
    scopes = [
      "https://www.googleapis.com/auth/cloud-platform"
    ]
  }

  shielded_instance_config {
    enable_integrity_monitoring = true
    enable_secure_boot          = false
    enable_vtpm                 = true
  }

  depends_on = [
    google_service_account.n8n,
    google_project_iam_member.n8n_instance_sa_roles,
    google_compute_address.n8n_ip,
    google_compute_address.n8n_private_ip,
  ]

  tags = ["ssh", "http-server", "https-server", "n8n-server"]
  zone = var.zone
}

# Group
resource "google_compute_instance_group" "n8n_group" {
  name        = "${var.environment}-n8n-group"
  zone        = var.zone
  instances   = [google_compute_instance.n8n_master.self_link]

  named_port {
    name = "http"
    port = "5678"
  }

  network     = google_compute_network.nogales-network.id
}

# Health check
resource "google_compute_health_check" "n8n" {
  name = "${var.environment}-n8n-health-check"
  timeout_sec        = 10
  check_interval_sec = 10

  http_health_check {
    port         = 5678
    request_path = "/healthz"
  }

  log_config {
    enable = false
  }
}

resource "google_compute_backend_service" "n8n" {
  name     = "${var.environment}-n8n"

  protocol              = "HTTP"
  port_name             = "http"
  timeout_sec           = 7200
  enable_cdn            = false

  backend {
    group = google_compute_instance_group.n8n_group.self_link
  }

  health_checks = [
    google_compute_health_check.n8n.self_link
    ]
}

resource "google_compute_url_map" "n8n" {
  name        = "${var.environment}-n8n"

  default_service = google_compute_backend_service.n8n.id

  host_rule {
    hosts        = [
      var.environment == "pro" ? "n8n.solvista.me." : "n8n-stg.solvista.me"
      ]
    path_matcher = "allpaths"
  }

  path_matcher {
    name            = "allpaths"
    default_service = google_compute_backend_service.n8n.id

    path_rule {
      paths   = ["/*"]
      service = google_compute_backend_service.n8n.id
    }
  }
}

resource "google_compute_target_https_proxy" "n8n" {
  name             = "${var.environment}-n8n"
  url_map          = google_compute_url_map.n8n.id
  ssl_certificates = [google_compute_managed_ssl_certificate.n8n.id]
}

resource "google_compute_global_forwarding_rule" "n8n" {
  name       = "${var.environment}-n8n"
  target     = google_compute_target_https_proxy.n8n.id
  port_range = 443
}

# GCP needs port 80 reachable for cert provisioning
resource "google_compute_target_http_proxy" "n8n_http" {
  name    = "${var.environment}-n8n-http"
  url_map = google_compute_url_map.n8n.id
}

resource "google_compute_global_forwarding_rule" "n8n_http" {
  name       = "${var.environment}-n8n-http"
  target     = google_compute_target_http_proxy.n8n_http.id
  port_range = 80
}
