terraform/network.tf

resource "google_compute_network" "nogales-network" {
  name                    = "${var.environment}-nogales-network"
  project                 = var.project_name
  auto_create_subnetworks = false
  # Maximum Transmission Unit in bytes
  mtu = 1460
}

resource "google_compute_subnetwork" "nogales-subnetwork" {
  name = "${var.environment}-nogales-subnetwork"
  # 10.2.0.0 - 10.2.255.255
  ip_cidr_range = "10.2.0.0/28"
  region        = var.region
  network       = google_compute_network.nogales-network.id
}

resource "google_compute_firewall" "ssh-rule" {
  name    = "${var.environment}-nogales-ssh-rule"
  network = google_compute_network.nogales-network.name
  allow {
    protocol = "tcp"
    ports    = ["22"]
  }
  source_ranges = ["0.0.0.0/0"]
}

resource "google_compute_firewall" "http-rule" {
  name    = "${var.environment}-nogales-http-rule"
  network = google_compute_network.nogales-network.name
  allow {
    protocol = "tcp"
    ports    = ["80"]
  }
  source_ranges = ["0.0.0.0/0"]
}

resource "google_compute_firewall" "https-rule" {
  name    = "${var.environment}-nogales-https-rule"
  network = google_compute_network.nogales-network.name
  allow {
    protocol = "tcp"
    ports    = ["443"]
  }
  source_ranges = ["0.0.0.0/0"]
}

resource "google_compute_firewall" "allow_sql_egress" {
  name      = "${var.environment}-allow-sql-egress"
  network   = google_compute_network.nogales-network.name
  direction = "EGRESS"

  allow {
    protocol = "tcp"
    # 5432 is the postgress port
    ports    = ["5432"]
  }

  destination_ranges = [google_compute_global_address.private_ip_range.address]
}

resource "google_compute_address" "nogales_private_ip" {
  name         = "${var.environment}-nogales-private-ip"
  subnetwork   = google_compute_subnetwork.nogales-subnetwork.name
  address_type = "INTERNAL"
  region       = var.region
  address      = "10.2.0.4"
}

resource "google_vpc_access_connector" "connector" {
  name          = "${var.environment}-nogales-theconnector"
  region        = var.region
  max_instances = 3
  min_instances = 2
  subnet {
    name = google_compute_subnetwork.nogales-subnetwork.name
  }
}


# No IP public address needed for videocall
resource "google_compute_address" "videcall_ip" {
  name   = "${var.environment}-nogales-videcall-ip"
  region = var.region
}

resource "google_compute_firewall" "mediasoup_rtp" {
  name    = "${var.environment}-mediasoup"
  network = google_compute_network.nogales-network.name

  allow {
    protocol = "udp"
    ports    = ["10000-59999"]
  }

  # Optionally allow TCP in the same range (for TCP fallback)
  allow {
    protocol = "tcp"
    ports    = ["10000-59999"]
  }

  # Restrict to specific source IPs if possible
  source_ranges = ["0.0.0.0/0"]

  target_tags = ["mediasoup-server"] # Apply only to instances with this tag
}
